github username update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://iammostak.github.io",
-  "name": "iammostak.github.io",
+  "homepage": "https://mdzeroseven.github.io",
+  "name": "mdzeroseven.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
